bases/default/onedev/ingress.ssh.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: onedev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`onedev.reynn.net`)
      kind: Rule
      services:
        - name: onedev
          port: 80
      middlewares:
        - name: redirect-web-to-443@internal
  tls:
    secretName: reynn-net-cert
    options:
      name: recommended-tls-opts
      namespace: utils
